add_library(abacus STATIC
    aba2eth.F
    aba2r12.F
    aba2tex.F
    abaaat.F
    abactocd.F
    abadip.F
    abadrv.F
    abadtra.F
    abaedrv.F
    abaenr.F
    abaesym.F
    abaexc.F
    abaflt.F
    abafmm.F
    abafsd.F
    abalnr.F
    abalrs.F
    abaltra.F
    abamag.F
    abamolden.F
    abander.F
    abandsym.F
    abanuc.F
    abanvib.F
    abaop2.F
    abaopg.F
    abaopt.F
    abaort.F
    abapcm.F
    abaptr.F
    abaqm3.F
    abaqmmm.F
    abaqpg.F
    abaqr.F
    abarhs.F
    abarint.F
    abarlx.F
    abarspn.F
    abaset.F
    abasop.F
    abatro.F
    abavib.F
    abavrml.F
    abawalk.F
    dalgnr.F
    eckart.F
    ecp.F
    gen1int_wrapper.F
    her1ave.F
    her1car.F
    her1drv.F
    her1int.F
    her1odc.F
    her1out.F
    her1pro.F
    her1sym.F
    her2ave.F
    her2dir.F
    her2drv.F
    her2el1.F
    her2el2.F
    her2fck.F
    her2gab.F
    her2her.F
    her2odc.F
    her2out.F
    her2sup.F
    her2sym.F
    herbas.F
    herdirect.F
    herdkh.F
    herdrv.F
    herfckcon.F
    hergam.F
    hergeo.F
    hergp.F
    hergroup.F
    herpar.F
    herqm3.F
    herrdn.F
    hersol.F
    hersym.F
    hertst.F
    huckel.F
	)

