add_library(cc STATIC
    asqr.F
    cc2_refop.F
    cc3_aabmat_doub.F
    cc3_aamat.F
    cc3_aden.F
    cc3_aden_cub.F
    cc3_aden_cub_t0.F
    cc3_bfmat.F
    cc3_bmatsd.F
    cc3_etasd.F
    cc3_fbmatt3zu.F
    cc3_fmat.F
    cc3_fmatsd.F
    cc3_ft3b.F
    cc3_gmat.F
    cc3_gmatnew.F
    cc3_hmat.F
    cc3_init.F
    cc3_lhtr.F
    cc3_omeg.F
    cc3_omeg3.F
    cc3_t3int.F
    cc3_t3int3.F
    cc3_xi_cont.F
    cc3_xisd.F
    cc_1idx_d2eff.F
    cc_1idxtran.F
    cc_21i2.F
    cc_21i3.F
    cc_2eexp_1.F
    cc_2eexp_2.F
    cc_2hyp.F
    cc_3hyp.F
    cc_4hyp.F
    cc_aamat.F
    cc_aodens3.F
    cc_aofock2.F
    cc_bamat.F
    cc_bfbsort1.F
    cc_bfden.F
    cc_bfif1.F
    cc_bmat.F
    cc_cauchy.F
    cc_cmat.F
    cc_cphf.F
    cc_d1ao.F
    cc_den.F
    cc_den2_pt.F
    cc_den_pt2.F
    cc_dhfao.F
    cc_dmat.F
    cc_drv.F
    cc_e1aim.F
    cc_e21con.F
    cc_e22con.F
    cc_effckmo.F
    cc_etadrv.F
    cc_etadrv1.F
    cc_exci.F
    cc_exgr.F
    cc_f1inact.F
    cc_famat.F
    cc_fbta.F
    cc_fckdela.F
    cc_fckrlx1.F
    cc_fdaa.F
    cc_fdba.F
    cc_fdc.F
    cc_fdd.F
    cc_fdfb.F
    cc_fmat.F
    cc_fmattst.F
    cc_fop.F
    cc_foppt.F
    cc_foppt_sc.F
    cc_fropro.F
    cc_ftst.F
    cc_ftstnew.F
    cc_get_lambda1.F
    cc_get_rmat.F
    cc_getgd.F
    cc_getgp.F
    cc_gim1.F
    cc_gmat.F
    cc_grad.F
    cc_grad0.F
    cc_grad2.F
    cc_grad2e.F
    cc_grad_1.F
    cc_gradient.F
    cc_hfr1den.F
    cc_hmat.F
    cc_hpqta.F
    cc_hyppol.F
    cc_iajb.F
    cc_ijcb.F
    cc_int3o2.F
    cc_int4o.F
    cc_jmat.F
    cc_kmat.F
    cc_lambdaq.F
    cc_lammats.F
    cc_lamtra.F
    cc_landf.F
    cc_landf2.F
    cc_landf3.F
    cc_lhtr.F
    cc_lhtr_noddy.F
    cc_lr.F
    cc_maomao.F
    cc_mcdny.F
    cc_mkrv.F
    cc_mmommo.F
    cc_mofcon2.F
    cc_mofconr12.F
    cc_nuccon.F
    cc_opa.F
    cc_pckutil.F
    cc_pqi.F
    cc_qaos.F
    cc_qm3.F
    cc_qmat.F
    cc_qmmm.F
    cc_qr2rs.F
    cc_r12.F
    cc_r12a2.F
    cc_r12batf.F
    cc_r12ccsd.F
    cc_r12mkvamkl.F
    cc_r12mkxajkl.F
    cc_r12mkxajklfr.F
    cc_r12no.F
    cc_r12rdpck.F
    cc_r12vunpack.F
    cc_r12xieta.F
    cc_r12xprep.F
    cc_rdaod.F
    cc_rdrsp.F
    cc_rhtr.F
    cc_rhtr3.F
    cc_rhtr_noddy.F
    cc_setdorps.F
    cc_setfa.F
    cc_setfb12.F
    cc_setk11.F
    cc_setxe.F
    cc_slv.F
    cc_soldrv.F
    cc_solrsp.F
    cc_sop.F
    cc_sort4o.F
    cc_sortz2.F
    cc_tmcal.F
    cc_tpa.F
    cc_trdrv.F
    cc_util.F
    cc_wrrsp.F
    cc_xetst.F
    cc_xieta.F
    cc_xopa.F
    cc_zkjam.F
    cccr_aa.F
    cccr_setup.F
    cccr_util.F
    ccder1.F
    ccdiis_solv.F
    cceq_solv.F
    ccetacor.F
    ccexlr.F
    ccexnorm.F
    ccexpfck.F
    ccfbint1.F
    ccfbint2.F
    ccfbtaao1.F
    ccfbtaao2.F
    ccfbtaf.F
    ccfndop.F
    cckappasq.F
    cclhtr_r12.F
    cclr_fa.F
    cclr_setup.F
    cclr_util.F
    cclt_yps1.F
    ccmcd_setup.F
    ccpt_btrden.F
    ccpt_den.F
    ccpt_eta.F
    ccpt_fropro.F
    ccpt_grad0.F
    ccpt_resort_den.F
    ccpt_symmback.F
    ccqr_setup.F
    ccreo2con.F
    ccrhs_ipm1.F
    ccrhsvec.F
    ccrlxxim.F
    ccrspsym.F
    ccsd_diis.F
    ccsd_energy.F
    ccsd_input.F
    ccsd_rhs.F
    ccsd_rhs3.F
    ccsd_rou3.F
    ccsd_sortao.F
    ccsd_triple.F
    ccsdr12ao.F
    ccsdr12cd.F
    ccsdr12oxr.F
    ccsdt_aa_noddy.F
    ccsdt_aden_noddy.F
    ccsdt_b_noddy.F
    ccsdt_ba_noddy.F
    ccsdt_eta_cont.F
    ccsdt_eta_noddy.F
    ccsdt_f_noddy.F
    ccsdt_fbmat.F
    ccsdt_ints_noddy.F
    ccsdt_o32_noddy.F
    ccsdt_t32_noddy.F
    ccsdt_xi_noddy.F
    ccsoppa.F
    cctrbt1.F
    cctrbt2.F
    ccximcon.F
    crayio.c
    crayio2.F
    herdirect_cc.F
    iroper2.F
	)
