add_library(choles STATIC
    cc_caa.F
    cc_choatr.F
    cc_chocc2.F
    cc_chodbg.F
    cc_chofop.F
    cc_choftr.F
    cc_chogd.F
    cc_choio.F
    cc_cholesky.F
    cc_cholrim.F
    cc_chomp2.F
    cc_chopden.F
    cc_chopt.F
    cc_chopt_dbg.F
    cc_cia.F
    cc_ciadbg.F
    cc_cyi.F
    cc_cyidbg.F
    cc_decmo.F
    cc_rdrspd.F
    cc_rmrsp.F
    cc_wrrspd.F
    nocc_util.F
	)
