add_library(gp STATIC
    character_processing.F90
    dalton_input_processing.F90
    gpdahle.F
    gphjj.F
    gpjeppe.F
    gpjkp.F
    gpjt.F
    gplucia.F
    gplucia_io.F
    gplupar.F
    gpsaue.F
    gpsimen.F
    gptrygve.F
    graphic.F
    input_reader.F90
    intf7790.F
    keyword.F90
    mempkg.F
    mpi_dummy.F
    mpi_dummyc.c
    mpimacro.F
    pvmmacro.F
    qpack.F
    vcraypack.F
	)
