add_library(lucita STATIC
    ciinfo.F
    dalton_interface.F
    dalton_mpi.F90
    density.F
    diagonal.F
    diagonalize.F
    fock.F
    io.F
    lucita_cfg.F90
    lucita_mcscf_ci_cfg.F90
    lucita_orbitalspaces.F90
    memory.F
    par_communication_model.F90
    par_io.F90
    par_io_fh.F90
    par_lucia.F
    par_solver.F
    par_sync_cw.F90
    program.F
    property.F
    sigma.F
    strings.F
    transform.F
    utils.F
    vecmat.F
	)
