add_library(rsp STATIC
    absorp.F
    deq27.F
    expone.F
    fone.F
    hypinp.F
    lagrang.F
    mcdrsp.F
    qfock.F
    qrhso.F
    rspave.F
    rspc8.F
    rspc82.F
    rspchannel.F
    rspcr1.F
    rspcr2.F
    rspcr3.F
    rspcr4.F
    rspcr5.F
    rspcr6.F
    rspcr7.F
    rspcr8.F
    rspcr9.F
    rspdm.F
    rspe2c.F
    rspesg.F
    rspesg_gp.F
    rspesg_lag.F
    rspfxd.F
    rspg.F
    rsphso.F
    rspief.F
    rspief1.F
    rspief2.F
    rspmai.F
    rspmc1.F
    rspmc2.F
    rspmc3.F
    rspoit.F
    rspoli.F
    rsporp.F
    rspprp.F
    rspqm3.F
    rspqmmm.F
    rspqrx3.F
    rspsol.F
    rspsol1.F
    rspsol2.F
    rspsoppa.F
    rsptmo1.F
    rsptmo2.F
    rsptmo3.F
    rsptmo4.F
    rsptpa1.F
    rsptpa2.F
    rsptpa3.F
    rspvec.F
    rspzfs.F
    x2expl.F
	)
