add_library(sirius STATIC
    ciauth.F
    ciham.F
    cioff.F
    cisig.F
    csfstuff.F
    dalcip.F
    dens.F
    detfi.F
    detpr.F
    dets0.F
    dets1.F
    drcctl.F
    dypc.F
    getcix.F
    getint.F
    intsort.F
    koopro4.F
    newtrahso.F
    r12aux.F
    siraba.F
    sirave.F
    sircan.F
    sircav.F
    sirci.F
    sircmo.F
    sirctl.F
    sirdiis.F
    sirfck.F
    sirgp.F
    sirgrad.F
    sirief.F
    sirinp.F
    sirlintrn.F
    sirloc.F
    sirmp2.F
    sirneo.F
    sirnexkap.F
    sirnr.F
    sirntra.F
    siropt.F
    sirorb.F
    sirout.F
    sirpcm.F
    sirpcmder.F
    sirpop.F
    sirqm3.F
    sirqmmm.F
    sirsav.F
    sirset.F
    sirsol.F
    sirsolpcm.F
    sirtest.F
    sirtr1.F
    sirtra.F
    sirupd.F
    symchk.F
	)
