add_library(soppa STATIC
    ccsd_tcmepkx.F
    dc_calc.F
    dc_eres.F
    dc_r1vec.F
    dc_res_o.F
    dc_rsplex.F
    dc_sres.F
    rp_anal.F
    rp_charge.F
    rp_check.F
    rp_diag.F
    rp_eres.F
    rp_getgp.F
    rp_incred.F
    rp_init.F
    rp_lrsolv.F
    rp_newtrial.F
    rp_optvec.F
    rp_orth_trn.F
    rp_redev.F
    rp_res_o.F
    rp_residual.F
    rp_rsplex.F
    rp_sres.F
    rp_trial1.F
    rp_trial2.F
    rp_trmom.F
    so_anal.F
    so_aodens.F
    so_bcktr.F
    so_bextract.F
    so_check.F
    so_close.F
    so_collect_tm.F
    so_dens.F
    so_densai1.F
    so_densai2.F
    so_diag.F
    so_ediag1.F
    so_ediag2.F
    so_eres.F
    so_excit1.F
    so_excout.F
    so_firgp.F
    so_fndpos.F
    so_getgp.F
    so_getmo.F
    so_gett2.F
    so_incred.F
    so_init.F
    so_initial.F
    so_intrp.F
    so_lrsolv.F
    so_memmax.F
    so_moenergy.F
    so_newtrial.F
    so_onefock.F
    so_onep.F
    so_onepmo.F
    so_open.F
    so_optvec.F
    so_ordeig.F
    so_orth_trn.F
    so_prpint.F
    so_read.F
    so_readset.F
    so_redev.F
    so_res_a.F
    so_res_b.F
    so_res_c.F
    so_res_cb.F
    so_res_cd.F
    so_res_cp.F
    so_res_fck.F
    so_res_o.F
    so_res_ovl.F
    so_res_ovlr.F
    so_res_sym.F
    so_res_tcb.F
    so_residual.F
    so_ropt.F
    so_rpprp1.F
    so_rsplex.F
    so_sdiag1.F
    so_secgp.F
    so_sigai.F
    so_sigda.F
    so_sort.F
    so_sqait2.F
    so_sres.F
    so_t2m1.F
    so_t2mp.F
    so_test.F
    so_test1.F
    so_tfset.F
    so_time.F
    so_tmltr.F
    so_tr1new.F
    so_tr1rp.F
    so_trial1.F
    so_trial2.F
    so_trmom.F
    so_twofock.F
    so_write.F
    so_writeset.F
    so_wrtve.F
	)

