add_library(dft "")

target_sources(
  dft
  PRIVATE
    basisinfo.c
    cube-fast.c
    dft_dftd.F
    eval-dso.c
    fun-b86.c
    fun-b86mx.c
    fun-b97-1.c
    fun-b97-2.c
    fun-b97-3.c
    fun-b97-d.c
    fun-b97-k.c
    fun-b97.c
    fun-becke.c
    fun-becke35.c
    fun-cam-b3lyp.c
    fun-dk87x.c
    fun-example.c
    fun-example2.c
    fun-example3.c
    fun-example4.c
    fun-example5.c
    fun-example6.c
    fun-example7.c
    fun-example8.c
    fun-example9.c
    fun-1-4.c
    fun-g96.c
    fun-gga.c
    fun-hcth120.c
    fun-hcth147.c
    fun-hcth407.c
    fun-hcth407p.c
    fun-hcth93.c
    fun-hcth93m.c
    fun-kt.c
    fun-lb94.c
    fun-lg93.c
    fun-lrc95x.c
    fun-lyp.c
    fun-lypr.c
    fun-mpbex.c
    fun-mpwx.c
    fun-optx.c
    fun-p86c.c
    fun-pbec.c
    fun-pbex.c
    fun-pw86x.c
    fun-pw91c.c
    fun-pw91nc.c
    fun-pw91x.c
    fun-pw91x2.c
    fun-pw92ac.c
    fun-pw92c.c
    fun-pz81.c
    fun-rcam-b3lyp.c
    fun-revpbex.c
    fun-rpbex.c
    fun-slater.c
    fun-vwn.c
    fun-wignerc.c
    fun-wl90c.c
    functionals.c
    gen-so-int.c
    general.c
    grid-gen.c
    grid-gen2.c
    integrator.c
    prop-eval.c
    quad-fast.c
    quad-faster.c
    quad-open.c
    quad-strict.c
    dft_gridLL.F
    dft_aos.F
    dft_ac.F
    dft_aux.F
    dft_den.F
    dft_exp.F
    dft_grad.F
    dft_grid.F
    dft_hes.F
    dft_inp.F
    dft_int.F
    dft_ksm.F
    dft_mag.F
    dft_mos.F
    dft_rho.F
    dso_cb.F
  )
