add_library(soppa "")

target_sources(
  soppa
  PRIVATE
    ccsd_tcmepkx.F
    dc_calc.F
    dc_omec.F
    dc_r1vec.F
    dc_res_o.F
    dc_rsplex.F
    dc_sres.F
    rp_charge.F
    rp_init.F
    rp_newtrial.F
    rp_orth_trn.F
    rp_trial1.F
    rp_trial3.F
    so_pertdens.F
    so_pertd1.F
    so_pertd2.F
    so_propmo.F
    so_anal.F
    so_aodens.F
    so_bcktr.F
    so_bextract.F
    so_tbextract.F
    so_check.F
    so_close.F
    so_collect_tm.F
    so_densai1.F
    so_densai2.F
    so_dens.F
    so_diag.F
    so_ediag1.F
    so_ediag2.F
    so_ediag2t.F
    so_eres.F
    so_excit1.F
    so_excout.F
    so_firgp.F
    so_fndpos.F
    so_getgp.F
    so_getmo.F
    so_gett2.F
    so_incred.F
    so_init.F
    so_initial.F
    so_intrp.F
    so_lnraba.F
    so_lnrout.F
    so_lrsoeq.F
    so_lrsolv.F
    so_memmax.F
    so_moenergy.F
    so_newtrial.F
    so_onefock.F
    so_onep.F
    so_onepmo.F
    so_open.F
    so_optvec.F
    so_ordeig.F
    so_orth_trn.F
    so_polar.F
    so_prpint.F
    so_read.F
    so_readset.F
    so_reave.F
    so_redev.F
    so_redgp.F
    so_redle.F
    so_res_a.F
    so_res_b.F
    so_res_cb.F
    so_res_cbt.F
    so_res_cd.F
    so_res_cdt.F
    so_res_c.F
    so_res_cp.F
    so_res_fck.F
    so_residual.F
    so_res_o.F
    so_res_ovl.F
    so_res_sym.F
    so_res_tcb.F
    so_res_tcbt.F
    so_ropt.F
    so_rpprp1.F
    so_rspleq.F
    so_rsplex.F
    so_sdiag1.F
    so_secgp.F
    so_sigai.F
    so_sigda.F
    so_sort.F
    so_sqait2.F
    so_sres.F
    so_stoppw.F
    so_t2m1.F
    so_t2mp.F
    so_test1.F
    so_test.F
    so_tfset.F
    so_time.F
    so_tmltr.F
    so_tr1new.F
    so_tr1rp.F
    so_trial1.F
    so_trial2.F
    so_trial3.F
    so_trmom.F
    so_trmom_1.F
    so_twofock.F
    so_write.F
    so_writeset.F
    so_wrtve.F
    so_parutils.F90
    so_info.F90
  )
