dnl noinst_PROGRAMS = testDD test3

lib_LIBRARIES = libqcsparsemat.a

dnl testDD_SOURCES = testDD.cpp
dnl testDD_LDADD   = libqcsparsemat.a $(FLIBS)

dnl test3_SOURCES = test3.cpp
dnl test3_LDADD   = libqcsparsemat.a $(FLIBS)

libqcsparsemat_a_SOURCES = \
Block.cpp		\
Block.h			\
BlockSparse.cpp		\
BlockSparse.h		\
DimensionF.h		\
DirectDensity.cpp	\
DirectDensity.h		\
DivideSpace.cpp		\
DivideSpace.h		\
DoubleSparse.cpp	\
DoubleSparse.h		\
Failure.cpp		\
Failure.h		\
general.h		\
genericblas.h		\
IndexF.h		\
InputF.h		\
IOF.h			\
Matrix.h		\
Permutation.cpp		\
Permutation.h		\
Sparse.h		\
Symbolic.cpp		\
Symbolic.h		\
mat-operations.cpp	\
mat-operations.h

EXTRA_DIST = bootstrap.sh
